--- a/Panel.bib
+++ b/Panel.bib
@@ -757,6 +757,18 @@
 }
 
 
+@book{HuntingtonKlein.2021,
+ author = {Huntington-Klein, Nick},
+ year = {2021},
+ title = {{The Effect: An Introduction to Research Design and Causality}},
+ price = {{\pounds}29.99},
+ address = {Boca Raton},
+ edition = {1st},
+ publisher = {{Chapman {\&} Hall/CRC}},
+ isbn = {1032125780}
+}
+
+
 @article{Jacobsenetal2005,
  author = {Jacobson, Louis and LaLonde, Robert and {G. Sullivan}, Daniel},
  year = {2005},
